add stars to unadvertised spots

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,14 @@ VPS_PATH=/home/user/food.example.com
 
 # Absolute path to the project repo on the server
 VPS_REPO=/home/user/nyc-eats
+
+# --- Cross-reference API keys ---
+# Yelp Fusion API key (get one at https://www.yelp.com/developers/v3/manage_app)
+YELP_API_KEY=
+
+# Google Places API key (must have Places API enabled)
+GOOGLE_API_KEY=
+
+# Daily request limits (optional, defaults shown)
+# YELP_DAILY_LIMIT=4500
+# GOOGLE_DAILY_LIMIT=1000
