--- a/cron/nyc-eats-refresh.service.in
+++ b/cron/nyc-eats-refresh.service.in
@@ -1,5 +1,5 @@
 [Unit]
-Description=NYC Eats weekly data refresh
+Description=NYC Eats daily data refresh & cross-reference
 After=network-online.target
 Wants=network-online.target
 
@@ -9,6 +9,8 @@ User={{VPS_USER}}
 Environment=NYC_EATS_REPO={{VPS_REPO}}
 Environment=NYC_EATS_SERVE={{VPS_PATH}}/dist
 Environment=NYC_EATS_LOG={{VPS_PATH}}/refresh.log
+Environment=YELP_API_KEY={{YELP_API_KEY}}
+Environment=GOOGLE_API_KEY={{GOOGLE_API_KEY}}
 ExecStart={{VPS_REPO}}/cron/nyc-eats-refresh
 StandardOutput=append:{{VPS_PATH}}/refresh.log
 StandardError=append:{{VPS_PATH}}/refresh.log
