--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,12 @@ VPS_REPO=/home/user/nyc-eats
 YELP_API_KEY=
 
 # Google Places API key (must have Places API enabled)
+# NOTE: Google is pre-filled locally — not needed on the server.
 GOOGLE_API_KEY=
+
+# OpenTable: no API key needed (uses public GQL endpoint)
 
 # Daily request limits (optional, defaults shown)
 # YELP_DAILY_LIMIT=4500
 # GOOGLE_DAILY_LIMIT=1000
+# OPENTABLE_DAILY_LIMIT=2000
