--- a/nginx.conf.in
+++ b/nginx.conf.in
@@ -22,6 +22,16 @@ server {
         add_header Cache-Control "public";
     }
 
+    location = /index.html {
+        add_header Cache-Control "no-cache";
+    }
+
+    # Hit counter API (tiny Python service on port 8091)
+    location /api/ {
+        proxy_pass http://127.0.0.1:8091;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location / {
         try_files $uri $uri/ =404;
     }
